fix navbar on small screents

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ header {
 }
 .nav-inside {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   background: var(--black-bg);
   justify-content: space-between;
   border-bottom: 2px solid var(--grey-border);
@@ -65,6 +65,9 @@ header {
 }
 .other-pages-links {
   padding: 0 1rem;
+}
+.other-pages-links:first-of-type {
+  padding-left: 0;
 }
 
 /* main {
@@ -372,6 +375,8 @@ section {
 @media (min-width: 672px) {
   .nav-inside {
     border-bottom: 1px solid transparent;
+    display: flex;
+    flex-direction: row;
   }
 
   .about {
